--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
   </head>
   <body>
     <div class="main">
-      <aside class="sidebar">SIDEBAR</aside>
+      <aside class="sidebar">
+        <div class="nav">
+          <div class="nav-option" style="opacity: 1">
+            <i class="fa-solid fa-house" style="color: white"></i>
+            <a href="#">Home</a>
+          </div>
+          <div class="nav-option">
+            <i class="fa-solid fa-magnifying-glass" style="color: white"></i>
+            <a href="#">Search</a>
+          </div>
+        </div>
+      </aside>
       <main class="main-content">MAIN CONTENT</main>
       <footer class="music-player">MUSIC PLAYER</footer>
     </div>
