--- a/index.html
+++ b/index.html
@@ -3,55 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google Font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./Assets/logo.png" />
-    <title>SPOTIFY</title>
+    <title>Spotify UI</title>
   </head>
+
   <body>
     <div class="main">
+      <!-- Sidebar -->
       <aside class="sidebar">
         <div class="nav">
-          <div class="nav-option" style="opacity: 1">
-            <i class="fa-solid fa-house" style="color: white"></i>
+          <div class="nav-option active">
+            <i class="fa-solid fa-house"></i>
             <a href="#">Home</a>
           </div>
           <div class="nav-option">
-            <i class="fa-solid fa-magnifying-glass" style="color: white"></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
             <a href="#">Search</a>
           </div>
         </div>
+
         <div class="library">
           <div class="options">
             <div class="lib-option nav-option">
-              <img src="./Assets/library_icon.png" alt="library_icon" />
+              <i class="fa-solid fa-book"></i>
               <a href="#">Your Library</a>
             </div>
+
             <div class="icons">
-              <i class="fa-solid fa-plus" style="color: white"></i>
-              <i
-                class="fa-solid fa-arrow-right-arrow-left"
-                style="color: white"
-              ></i>
+              <i class="fa-solid fa-plus"></i>
+              <i class="fa-solid fa-arrow-right-arrow-left"></i>
             </div>
           </div>
-          <div class="box"></div>
+
+          <div class="lib-box">
+            <div class="box">
+              <p class="box-p1">Create your first playlist</p>
+              <p class="box-p2">It's easy, we'll help you</p>
+              <button class="badge">Create Playlist</button>
+            </div>
+
+            <div class="box">
+              <p class="box-p1">Let’s find some podcasts</p>
+              <p class="box-p2">We’ll keep you updated on new episodes</p>
+              <button class="badge">Browse Podcasts</button>
+            </div>
+          </div>
         </div>
       </aside>
-      <main class="main-content">MAIN CONTENT</main>
-      <footer class="music-player">MUSIC PLAYER</footer>
+
+      <!-- Main Content -->
+      <main class="main-content">
+        <h2>Recently Played</h2>
+      </main>
     </div>
+
+    <!-- Music Player -->
+    <footer class="music-player">
+      <div class="player-left">Now Playing</div>
+    </footer>
   </body>
 </html>
